RESOLVED FIXED275739
REGRESSION (276531@main): Content flash when expanding image viewer on eBay page
https://bugs.webkit.org/show_bug.cgi?id=275739
Summary REGRESSION (276531@main): Content flash when expanding image viewer on eBay page
Antoine Quint
Reported 2024-06-21 09:23:18 PDT
With a recent STP, such as STP 196, load an eBay listing, such as https://www.ebay.com/itm/355596559276, and click the button the button to expand the image gallery (the double arrow next to the main listing image). Now exit the image viewer, and enter it again. You'll notice this second time, and all the times following that, a flash of the image viewer before it fades in. This does not happen on system Safari on macOS 14.5, or Chrome or Firefox. This has regressed with 276531@main.
Attachments
Testcase (905 bytes, text/html)
2024-07-07 12:49 PDT, Antoine Quint
no flags
Testcase (707 bytes, text/html)
2024-07-07 13:18 PDT, Antoine Quint
no flags
Antoine Quint
Comment 1 2024-06-21 09:23:30 PDT
Antoine Quint
Comment 2 2024-06-21 09:31:39 PDT
Antoine Quint
Comment 3 2024-07-07 12:49:31 PDT
Created attachment 471830 [details] Testcase It took a while but I worked out a reduction. The issue is that if an element has an animation within a container with `display: none`, touching the style on that container will resume the animation on the child, even though `display: none` is still in play.
Antoine Quint
Comment 4 2024-07-07 13:18:14 PDT
Created attachment 471831 [details] Testcase
Antoine Quint
Comment 5 2024-07-10 15:31:36 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/47084
EWS
Comment 6 2024-07-11 14:49:37 PDT
Committed 280876@main (d08faf9fab62): <https://commits.webkit.org/280876@main> Reviewed commits have been landed. Closing PR #30047 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.